<resources>
    <string name="app_name">Teckers App</string>
    <string name="logout">Log Out</string>
    <string name="title_messages">Messages</string>
    <string name="title_teams">Teams</string>
    <string name="title_deliverables">Deliverables</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_activity_navigationmenu">NavigationMenu</string>
    <string name="imageDescription">SenderImage</string>
    <string name="text_sender">Sender</string>
    <string name="text_timestamp">Timestamp</string>
    <string name="text_subject">Subject</string>
    <string name="tab_text_1">High Priority</string>
    <string name="tab_text_2">Low Priority</string>
    <string name="error_authentication">Invalid user. Please contact your administrator.</string>
    <string name="error_response_messages">Unable to show your messages, please try again later.</string>
    <string name="retry">Retry</string>
    <string name="text_description">Deliverable Description</string>
    <string name="text_date">Date</string>
    <string name="image_status_description">Deliverable Status Indicator</string>
    <string name="image_tecker_description">Tecker Image</string>
    <string name="text_programs">Programs</string>
    <string name="not_selected_program">Select a program</string>
    <string name="text_batches">Batches</string>
    <string name="not_selected_batch">Select a batch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
