<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_messages">

    <fragment
            android:id="@+id/navigation_messages"
            android:name="org.desarrolladorslp.teckersapp.ui.messages.MessageFragment"
            android:label="@string/title_messages"
            tools:layout="@layout/fragment_messages" />

    <fragment
    android:id="@+id/navigation_deliverables"
    android:name="org.desarrolladorslp.teckersapp.ui.deliverables.DeliverableFragment"
    android:label="@string/title_deliverables"
    tools:layout="@layout/fragment_deliverables" />

    <fragment
        android:id="@+id/navigation_parent_teckers"
        android:name="org.desarrolladorslp.teckersapp.ui.parentTeckers.ParentTeckersFragment"
        android:label="Teckers"
        tools:layout="@layout/fragment_parent_teckers" />

    <fragment
            android:id="@+id/navigation_teams"
            android:name="org.desarrolladorslp.teckersapp.ui.teams.TeamFragment"
            android:label="@string/title_teams"
            tools:layout="@layout/fragment_teams" />

    <fragment
            android:id="@+id/navigation_sessions"
            android:name="org.desarrolladorslp.teckersapp.ui.sessions.SessionFragment"
            android:label="@string/title_sessions"
            tools:layout="@layout/fragment_sessions" />
</navigation>