<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/sender"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="117dp"
            android:layout_marginLeft="117dp"
            android:layout_marginEnd="79dp"
            android:layout_marginRight="79dp"
            android:text="@string/text_sender"
            android:textSize="22sp"
            android:textStyle="bold" />

    <ImageView
            android:id="@+id/senderImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="311dp"
            android:layout_marginRight="311dp"
            android:contentDescription="@string/imageDescription"
            app:srcCompat="@android:color/darker_gray" />

    <TextView
            android:id="@+id/timestamp"
            android:layout_width="77dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="335dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/text_timestamp"
            android:textAllCaps="false"
            android:textSize="12sp" />

    <TextView
            android:id="@+id/subject"
            android:layout_width="292dp"
            android:layout_height="66dp"
            android:layout_alignTop="@+id/sender"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="118dp"
            android:layout_marginLeft="118dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/text_subject"
            android:textSize="18sp" />


</RelativeLayout>