<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/deliverable_item_layout"
    android:background="@drawable/selector_row">

    <TextView
        android:id="@+id/date_column1"
        android:layout_width="96dp"
        android:layout_height="27dp"

        android:layout_below="@+id/description_column1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="0dp"
        android:text="@string/text_date"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageStatus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/image_status_description"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/date_column2"
        android:layout_width="96dp"
        android:layout_height="27dp"
        android:layout_below="@+id/description_column2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:text="@string/text_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/description_column2"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/text_description"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description_column1"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_description"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>